# penumbra-explorer-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  audit.toml  cloudbuild.yaml  diesel.toml  docker-compose.yml
.github/workflows/: ci-cd-development.yml  ci-cd-production.yml  ci-cd-staging.yml  deploy.yml
migrations/2025-03-24-000001_initial_schema/: down.sql  up.sql
migrations/2025-03-24-000002_add_index_watermarks/: down.sql  up.sql
migrations/2025-04-03-000001_raw_data_to_text/: down.sql  up.sql
migrations/2025-04-10-000001_drop_index_watermarks/: down.sql  up.sql
migrations/2025-04-15-000001_reindex/: up.sql
migrations/2025-04-24-000001_ibc/: up.sql
migrations/2025-05-01-000001_counterparty_channel/: up.sql
migrations/2025-05-01-000002_timestamp_filter_ibc/: down.sql  up.sql
migrations/2025_03_25_add_version_column/: up.sql
migrations/2025_03_25_app_schema/: down.sql  up.sql
migrations/2025_03_25_ensure_indexes/: down.sql  up.sql
src/: db_migrations.rs  lib.rs  main.rs  options.rs  parsing.rs
src/api/: handlers.rs  mod.rs
src/api/graphql/: context.rs  mod.rs  schema.rs
src/api/graphql/pubsub/: ibc.rs  mod.rs  triggers.rs
src/api/graphql/resolvers/: block.rs  handlers.rs  ibc.rs  mod.rs  search.rs  stats.rs  subscription.rs  transaction.rs
src/api/graphql/scalars/: bigdecimal.rs  datetime.rs  mod.rs
src/api/graphql/types/: asset.rs  block.rs  event.rs  ibc.rs  inputs.rs  mod.rs  stats.rs  subscription.rs  subscription_types.rs  transaction.rs  unions.rs
src/app_views/: block_details.rs  explorer.rs  mod.rs  transactions.rs
src/app_views/helpers/: block.rs  mod.rs  transaction.rs
src/app_views/utils/: block.rs  ibc.rs  mod.rs  transaction.rs
src/coordination/: mod.rs  transaction_queue.rs
src/grpc/: client.rs  mod.rs  scheduler.rs
