[package]
name = "penumbra-explorer"
version = "0.1.0"
edition = "2021"
description = "A backend service for exploring the Penumbra blockchain made by PK Labs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
cometindex = { git = "https://github.com/penumbra-zone/penumbra", rev = "2192ac38", package = "cometindex" }
penumbra-sdk-proto = { git = "https://github.com/penumbra-zone/penumbra", rev = "2192ac38", package = "penumbra-sdk-proto" }
prost = "=0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }
tokio = { version = "1.32", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = "0.6.20"
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
async-graphql = { version = "6.0", features = ["chrono"] }
async-graphql-axum = "6.0"
hex = "0.4"
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.1.0", features = ["postgres"] }
pq-sys = "= 0.6.0"
base64 = "0.22.1"

[lib]
path = "src/lib.rs"

[[bin]]
name = "penumbra-explorer"
path = "src/main.rs"