[package]
name = "penumbra-explorer"
version = "0.1.0"
edition = "2021"
description = "A backend service for exploring the Penumbra blockchain made by PK Labs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
cometindex = { git = "https://github.com/penumbra-zone/penumbra", rev = "f09cf0e123cb8c2f33124cd07c3e78260581ffe6", package = "cometindex" }
penumbra-sdk-proto = { git = "https://github.com/penumbra-zone/penumbra", rev = "f09cf0e123cb8c2f33124cd07c3e78260581ffe6", package = "penumbra-sdk-proto" }
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "bigdecimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
tokio = { version = "1.44.2", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.6.20", features = ["ws"] }
dotenv = "0.15"
tower = "0.4"
tower-http = { version = "0.4.0", features = ["cors"] }
async-graphql = { version = "5.0.10", features = ["chrono"] }
async-graphql-axum = "5.0.10"
hex = "0.4"
diesel = { version = "2.1", features = ["postgres", "chrono"] }
diesel_migrations = { version = "2.1", features = ["postgres"] }
pq-sys = "0.6"
base64 = "0.22"
futures-util = "0.3"
async-stream = "0.3"
tokio-stream = { version = "0.1.17", features = ["sync"] }
regex = "1.11.1"
hyper = { version = "0.14", features = ["http1", "http2", "client"] }
hyper-rustls = { version = "0.23", features = ["http2"] }
bytes = "1.0"
http = "0.2"
tonic = "0.9"

[lib]
path = "src/lib.rs"

[[bin]]
name = "penumbra-explorer"
path = "src/main.rs"